# Audiologger

./: .gitignore  .travis-dependencies.sh  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  TODO.md  todo.md
Audiologger/: Audiolog.hpp  LinkedList.cpp  LogHandler.cpp  LogHandler.hpp  Player.cpp  Player.hpp  Recorder.cpp  Recorder.hpp  logging.cpp  main.cpp
Audiologger.xcodeproj/: project.pbxproj
Audiologger.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Audiologger.xcodeproj/xcuserdata/malte.xcuserdatad/xcschemes/: Audiologger.xcscheme  xcschememanagement.plist
cmake/Modules/: FindTaglib.cmake
headers/: Audiolog.hpp  AudiologgerConfig.hpp  AudiologgerConfig.hpp.in  LinkedList.hpp  LogHandler.hpp  Player.hpp  logging.hpp  parseoptions.hpp
src/: Audiolog.cpp  LogHandler.cpp  Player.cpp  Recorder.cpp  main.cpp  parseoptions.cpp
